# csp-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  solve-queens.c  solve-sudoku.c
src/: CMakeLists.txt  csp.c  csp.h  csp.inc
tests/: CMakeLists.txt  test-constraint-accessors.c  test-constraint-to-check.c  test-constraint.c  test-init-finish-1.c  test-init-finish-2.c  test-init-finish-3.c  test-problem-is-consistent.c  test-problem.c
